02/02/2005
----------
1. fix a bug in fetchmail.pl readdata() which always returns true
   after remote pop3 socket is closed unespectedly, this caused a fever
   loop in fetchmail(), thus introduced huge process...
   (reported by Mike Fahey, mfahey.AT.enter.net)
2. Romanian (ro & ro.utf8) lang and template files translation update
   (thanks to Gabriel Hojda, gabriel.hojda.AT.gmail.com)


02/01/2005
----------
1. rename option log_filter_detail to debug_mailfilter,
   add option debug_request, debug_fork to openwebmail.conf.default
2. new mirror site at Jyvaskyla, Finland
   http://ws182.wts.fi/openwebmail/
   (thanks to Pasi Sjoholm, pasi.sjoholm.AT.tieto-x.fi)
3. remove stale mirror sites
   http://www.brc.com.br/openwebmail
   http://openwebmail.typoheads.com


01/30/2005
----------
1. fix a bug in spellcheck that unreognized words in URL would cause
   error in spellcheck output
   (reported by Thomas Chung, tchung.AT.openwebmail.org)
2. show link to original message saved in draft folder in sendmail error message
3. add charset support for stationery book
   replace all stationary in code to stationery


01/29/2005
----------
1. support autuo cc feature
   (suggested by Dominique, dominique.fournier.AT.grenoble.cnrs.fr)
2. new mirror site at Khonkaen, Thailand
   http://openwebmail.nameserver.in.th/
   (thanks to Pakon Jamsai, buagern.AT.hotmail.com)


01/28/2005
----------
1. Dutch language file translation update
   (thanks to Jeroen Visser, openwebmail.AT.forty-two.nl)
2. Romanian lang and template files translation update
   (thanks to Gabriel Hojda, gabriel.hojda.AT.gmail.com)
3. New language translation: Croatian
   (thanks to Igor Zivkovic, igor.AT.linuxfromscratch.org)


01/26/2005
----------
1. fix the problem that openwebmail-main.pl/openwebmail-read.pl process may die
   unexpectedly if viruscheck/spamcheck option is enabled but related daemon
   is not available.
Why: When owm opens a pipe to the spamcheck/viruscheck client cmd (spamc/clamdscan),