@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.50
-releasedate		20050202
+releasedate		20050203
 
 ##############################################################################
 # host dependent configuration
